syntax = "proto3";

package thermostat;

message Temp {
	string id = 1;
	string temp_setting = 2;
}

message SetTempRequest {
	Temp temp = 1; // will not contain an id
}

message SetTempResponse {
	Temp temp = 1; // will contain an id
}

message ViewTempRequest {
	string temp_id = 1;
}

message ViewTempResponse {
	Temp temp = 1;
}

message ChangeTempRequest {
	Temp temp = 1;
}

message ChangeTempResponse {
	Temp temp = 1;
}



service ThermostatService {
	rpc SetTemp (SetTempRequest) returns (SetTempResponse) {}
	rpc ViewTemp (ViewTempRequest) returns (ViewTempResponse) {}
	rpc ChangeTemp (ChangeTempRequest) returns (ChangeTempResponse) {}
}